Membership Section made responsive. Hamburger menu z-index bug fixed. Unneccessary responsive code removed

--- a/Landing-Page/landing-page.css
+++ b/Landing-Page/landing-page.css
@@ -71,7 +71,7 @@ a.pseudo-nav {
   background: transparent;
   border:none;
   outline: none;
-  z-index: 3;
+  z-index: 4;
 }
 
 .hamburger-svg {
@@ -127,15 +127,16 @@ a.pseudo-nav {
   padding-block: 3%;
 
   border-radius: 0 0 1rem 1rem;
-  background: white;
+  background: rgba(255, 255, 255);
 
   transform: translateY(-100%);
   transition: all 0.8s ease-in-out;
+  z-index: 3;
 }
 
 .m-links {
   text-align: right;
-  font-size: 1rem;
+  font-size: 1.1rem;
   font-weight: 500;
   color:#1a1a1a;
   
@@ -158,19 +159,19 @@ i.logo-icon {
 }
 
 a.heading {
-  font-size: 1.3rem;
+  font-size: 1.5vw;
   font-weight: 700;
   color: white;
 }
 
 .nav-menu {
   display: flex;
-  gap: 2.3rem;
+  gap: 2.5vw;
 }
 
 a.links {
   color: #cbd5e0;
-  font-size: 1rem;
+  font-size: 1.2vw;
   font-weight: 600;
 }
 
@@ -179,16 +180,16 @@ a.links {
 }
 
 .join-or-login {
-  margin-right: 2.8rem;
+  margin-right: 3vw;
   display: flex;
   align-items: center;
-  gap: 1.8rem;
+  gap: 2vw;
 }
 
 a.login {
   text-decoration: none;
   color: white;
-  font-size: 0.8rem;
+  font-size: 1vw;
   font-weight: 500;
 }
 
@@ -437,7 +438,7 @@ p.about-p {
 /* Membership Section Styles */
 
 section.membership-section {
-  display: none;
+  display: flex;
   align-items: center;
   flex-direction: column;
   background-color: #1a1a1a;
@@ -476,7 +477,7 @@ p.membership-p {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 330px;
+  width: 25vw;
   border-radius: 12px;
   padding: 1.8rem 1.2rem;
   flex-shrink: 0;
@@ -544,7 +545,7 @@ p.plan-description {
 .start-plan {
   align-self: center;
   margin-top: auto;
-  padding: 16px 89px 15px 90px;
+  padding: 6% 25%;
   border-radius: 8px;
   background-color: #1a1a1a;
 
